<resources>
    <string name="app_name">Studigotchi</string>
    <string name="learn">Lernen</string>
    <string name="mainActivity">Enter</string>
    <string name="enter_Name">Gib einen Namen ein</string>
    <string name="welcome">Herzlich Willkommen bei Studigotchi!\n
    Jetzt geht die Reise deines Studigotchis los.\n
    Gib deinem Studigotchi zuerst einen Namen.</string>
    <string name="deathMessage">Das wars dann wohl…</string>
    <string name="deathMessage2">Du wurdest exmatrikuliert!</string>
    <string name="tag_der_exmatrikulation">Tag der Exmatrikulation</string>
    <string name="feed">Füttern</string>
    <string name="sleep">Schlaf</string>
    <string name="party">Party</string>
    <string name="info_app">Studigotchi ist ein Informatikprojekt im Rahmen des Medieninformatikstudiums an der Hochschule
                            Duesseldorf unter der Leitung von Prof. Dr. Gundula Dörries und Jennifer Rose.</string>
    <string name="info_ueberschrift">Studigotchi</string>
    <string name="info_copyright"> &#xA9; Julian Dohmen, Jonas Feige &amp; Leo Nobis</string>
    <string name="info_datenschutz">"Die Grafiken der Buttons stammen vom User Freepik von www.flaticon.com
        \nAlle verwendeten Sounds und stammen von www.freesound.org und www.zapsplat.com
        \nDie Musik stammt von www.freemusicarchive.org (Komiku - School)
        \nAnimationen und Studi Grafiken wurden selbst erstellt."</string>
    <string name="test_game">Testspiel \n(empfohlen zur Bewertung)</string>
    <string name="normal_game">normales Spiel</string>
    <string name="slow_game">langsames Spiel</string>
    <string name="anleitungs_text">Damit dein Studi ein erfolgreiches Studium absolviert musst du dich um seine Bedürfnisse Leistung und Energie kümmern. Wenn die Leistung deines Studis auf 0 fällt, wird er exmatrikuliert. Um dies zu verhindern, muss dein Studi regelmäßig lernen. Zum Lernen benötigt dein Studi Energie. Es gibt drei Wege um an Energie zu gelangen:
	\n\nEssen
	\n	- geht sehr schnell
	\n	- gibt relativ wenig Energie
	\n\nSchlafen
	\n	- dein Studi wacht mit neuer Energie auf, je nach Schlafdauer
	\n	- Schlafen verlangsamt die Leistungsabnahme
	\n\nFeiern
	\n	- dauert länger als Essen
	\n	- gibt viel Energie
\n\nWährend eine Aktion durchgeführt wird, sind alle anderen Aktionen gesperrt.</string>
    <string name="anleitung">Anleitung</string>
    <string name="spielgeschwindigkeit">Wähle eine Spielgeschwindigkeit</string>
    <string name="neustart">Neustart</string>
    <string name="exmatrikulierter_studi">Exmatrikulierter Studi</string>
    <string name="gluecklicher_studi">Glücklicher Studi</string>
    <string name="name_text">Name: </string>
    <string name="studigotchi">Studigotchi</string>
    <string name="leistung">Leistung</string>
    <string name="energie">Energie</string>
    <string name="lernen">Lernen</string>
    <string name="studi">Studi</string>
    <string name="essen">essen</string>
    <string name="schlafen">schlafen</string>
    <string name="feiern">feiern</string>
</resources>
