<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".InfoActivity">

    <TextView
        android:id="@+id/infoUeberschrift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/info_ueberschrift"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/infoCopy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_copyright"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/infoText"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_margin="10dp"
        android:text="@string/info_app" />

    <TextView
        android:id="@+id/infoDatenschutz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/info_datenschutz" />

</LinearLayout>